# multi-saas-crm

./: .gitignore  FEATURES_COMPLETED.md  MIGRATION_GUIDE.md  README.md  analyze-docker-size.sh  create_tables.py  docker-compose.dev.yml  docker-compose.microservices.yml  docker-compose.minimal.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  fix_all_endpoints.py  fix_tenant_id.py  fix_tenant_id_advanced.py  package-lock.json  package.json  start-dev.sh  start.bat  start.sh  startup.md  techtask.txt  test-crm-integration.js  test-custom-fields.js  test-direct-custom-fields.js  test-full-integration-v2.js  test-full-integration.js  test-routing.js  test-services.js  test-status.js  test_auth.py  test_contacts.py  test_contacts_simple.py  test_login.json  test_refresh.json  test_settings.py  token.json  update_frontend_urls.py
ai-service/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
analytics-service/: Dockerfile  README.md  docker-compose-secrets.yml  docker-compose.analytics.yml  docker-swarm-production.yml  package-lock.json  package.json  tsconfig.json
api-gateway/: .env.example  Dockerfile  Dockerfile.simple  README.md  docker-compose.yml  package-lock.json  (+2 more)
event-ingestion-service/: Cargo.toml  Dockerfile  schema.sql  test_events.json
event-ingestion-service/src/: config.rs  main.rs
event-ingestion-service/src/processors/: event_processor.rs  mod.rs
event-ingestion-service/src/transformers/: data_transformer.rs  mod.rs
extension-runtime-service/: Cargo.toml  test.wasm
extension-runtime-service/src/: main.rs
(+317 files in other folders)
